gcc/testsuite/gm2/pim/fail/cyclictypes4.mod
MODULE cyclictypes4 ;

TYPE
   A = B ;
   B = C ;
   C = D ;
   D = A ;

VAR
   v: A ;
BEGIN

END cyclictypes4.
